--- a/RBHTR.html
+++ b/RBHTR.html
@@ -51,5 +51,30 @@
             </div><!--.row-->
 
         </div><!--.main-content-->
+        <footer class="site-footer">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>Let's Work Together!</h3>
+                </div> <!-- /col-6-->
+
+                <div class="col-sm-3">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div> <!-- /col-3-->
+
+                <div class="col-sm-3">
+                    <h4>Contact:</h4>
+                    <ul>
+                        <li>817.907.1449</li>
+                        <li>violetnichols01@gmail.com</li>
+                    </ul>
+                </div> <!-- /col-3-->
+            </div>
+        </footer>
     </body><!--.rbhtr-->
 </html>
