--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
     <body class="portfolio">
         <header class="site-header"><!-- Fixed navbar -->
             <nav class="navbar navbar-expand-md fixed-top">
+                <a href="index.html"><img src="vnlogo.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
