--- a/icr.html
+++ b/icr.html
@@ -11,17 +11,30 @@
     </head>
 
     <body class="icr">
-        <header class="site-header">
-            <a href="index.html"><img src="vnlogo.png"></a>
-            <nav class="main-navigation">
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+       <header class="site-header"><!--.Fixed-navbar -->
+            <div class="container">
+                <nav class="navbar navbar-expand-md fixed-top">
+                    <a href="index5.html"><img src="vnlogo.png"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"></button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="resume.html">Resume</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div><!--.container-->
+        </header><!--.Fixed-navbar--><!--.site-header-->
 
         <div class="main-content">
             <h2>Intercultural Communication Report</h2>
