--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
             <div class="hero-section">
                 <h1>Violet Nichols</h1>
-                <h3>UX Designer</h3>
+                <h3>UX Designer and Technical Writer</h3>
             </div> <!-- .hero-section-->
             
             <div class="main-content">
