--- a/about.html
+++ b/about.html
@@ -60,31 +60,37 @@
         </div><!--.main-content-->
     
 
-        <footer class="site-footer">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3>Let's Work Together!</h3>
-                </div> <!-- /col-6-->
+       <footer class="site-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h3>Let's Work Together!</h3>
+                        </div> <!-- /col-6-->
 
-                <div class="col-sm-3">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div> <!-- /col-3-->
+                        <div class="col-sm-3">
+                            <ul>
+                                <li><a href="index5.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="resume.html">Resume</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div> <!-- /col-3-->
 
-                <div class="col-sm-3">
-                    <h4>Contact:</h4>
-                    <ul>
-                        <li>817.907.1449</li>
-                        <li>violetnichols01@gmail.com</li>
-                    </ul>
-                </div> <!-- /col-3-->
-            </div>
-        </footer>
+                        <div class="col-sm-3">
+                            <h4>Contact:</h4>
+                            <ul>
+                                <li>817.907.1449</li>
+                                <li>violetnichols01@gmail.com</li>
+                            </ul>
+                        </div> <!-- /col-3-->
+                    </div><!--.row-->
+                </div><!--.container-->
+            </footer>
+
+            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
     </body><!--.about-->
 
 </html>
