--- a/OCSR.html
+++ b/OCSR.html
@@ -74,7 +74,7 @@
 
                         <div class="col-sm-3">
                             <ul>
-                                <li><a href="index5.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="resume.html">Resume</a></li>
                                 <li><a href="portfolio.html">Portfolio</a></li>
