--- a/resume.html
+++ b/resume.html
@@ -48,23 +48,23 @@
                 <div class="col-sm-4">
                     <h3>Relevant Courses</h3>
                         <ul>
-                            <li>Usability and User Experience in Technical Communication: User experience research, analysis, testing, and wireframe development</li>
-                            <li>Information Design for Electronic Media: Website design, HTML, and CSS</li>
-                            <li>Visual Technical Communication: Visual design elements for user experience and technical documents</li>
-                            <li>Content Strategy for Technical Communication: Website redesign based on competitor and persona research and analysis</li>
-                            <li>The Profession of Technical Communication: Project leadership, basic UX design, video content creation, and content revision</li>
-                            <li>Content Analysis in Technical Communication: Analyzing media and data optimization</li>
-                            <li>Technical Writing: Professional and technical writing, memo creation, formal reports</li>
-                            <li>Technical Editing: Editing and revision of technical documents</li>
-                            <li>Advanced Technical Communication: Formal report writing, conducting interviews, and research reports</li>
-                            <li>Writing Technical Procedures and Manuals: Creating instructional documents with user personas in mind</li>
-                            <li>Strategic Social Media: Social media plan creation and implementation</li>
-                            <li>Digital Media for Professional Communication: Social media utilization for communication and marketing purposes</li>
-                            <li>New Media Experience: Memo and formal document writing relating to digital content creation</li>
-                            <li>Proposal Writing: Research and writing of proposals and grants</li>
-                            <li>Business Computers: Microsoft Excel and digital media history</li>
-                            <li>Business Statistics with Spreadsheets: Further analysis with graphs and spreadsheets</li>
-                            <li>Data Analysis with Spreadsheets: Analysis with graphs and spreadsheets</li>
+                            <li><strong>Usability and User Experience in Technical Communication:</strong> User experience research, analysis, testing, and wireframe development</li>
+                            <li><strong>Information Design for Electronic Media:</strong> Website design, HTML, and CSS</li>
+                            <li><strong>Visual Technical Communication:</strong> Visual design elements for user experience and technical documents</li>
+                            <li><strong>Content Strategy for Technical Communication:</strong> Website redesign based on competitor and persona research and analysis</li>
+                            <li><strong>The Profession of Technical Communication:</strong> Project leadership, basic UX design, video content creation, and content revision</li>
+                            <li><strong>Content Analysis in Technical Communication:</strong> Analyzing media and data optimization</li>
+                            <li><strong>Technical Writing:</strong> Professional and technical writing, memo creation, formal reports</li>
+                            <li><strong>Technical Editing:</strong> Editing and revision of technical documents</li>
+                            <li><strong>Advanced Technical Communication:</strong> Formal report writing, conducting interviews, and research reports</li>
+                            <li><strong>Writing Technical Procedures and Manuals:</strong> Creating instructional documents with user personas in mind</li>
+                            <li><strong>Strategic Social Media:</strong> Social media plan creation and implementation</li>
+                            <li><strong>Digital Media for Professional Communication:</strong> Social media utilization for communication and marketing purposes</li>
+                            <li><strong>New Media Experience:</strong> Memo and formal document writing relating to digital content creation</li>
+                            <li><strong>Proposal Writing:</strong> Research and writing of proposals and grants</li>
+                            <li><strong>Business Computers:</strong> Microsoft Excel and digital media history</li>
+                            <li><strong>Business Statistics with Spreadsheets:</strong> Further analysis with graphs and spreadsheets</li>
+                            <li><strong>Data Analysis with Spreadsheets:</strong> Analysis with graphs and spreadsheets</li>
                         </ul>
                 </div> <!-- /col-4-->
 
